# warpcompress-c

./: CMakeLists.txt  README.md
.github/workflows/: build-release.yml  ci.yml  release-v010.yml
include/: bufpool.h  codecs.h  container.h  threadpool.h  util.h  warp.h
src/: bufpool.c  codecs_lz4.c  codecs_registry.c  codecs_snappy.c  codecs_zstd.c  container.c  main.c  threadpool.c  util.c
